--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
